[package]
name = "clircle"
version = "0.5.0"
authors = ["Niklas Mohrin <dev@niklasmohrin.de>"]
license = "MIT OR Apache-2.0"
rust-version = "1.69"
edition = "2021"
description = "Detect IO circles in your CLI apps arguments."
homepage = "https://github.com/niklasmohrin/clircle"
repository = "https://github.com/niklasmohrin/clircle"
documentation = "https://docs.rs/clircle"
readme = "README.md"
categories = ["command-line-interface", "filesystem", "os"]
keywords = ["cycle", "arguments", "argv", "io"]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_derive"]
test-close-again = []

[dependencies]
serde = { version = "1.0.117", optional = true }
serde_derive = { version = "1.0.117", optional = true }
cfg-if = "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "winbase", "processenv", "handleapi", "ntdef", "fileapi", "std"] }

[dev-dependencies]
tempfile = "3.1.0"

[target.'cfg(unix)'.dev-dependencies.nix]
version = "0.29"
default-features = false
features = ["term"]
